styles/larger.css
@import url('https://fonts.googleapis.com/css2?family=Courgette&family=Poppins:wght@200&display=swap');

@media (min-width: 1000px){

    nav {
        display: flex;
    }
    
    nav a {
        display: block;
        flex: 1 1 100%;
    }
    
    nav a:hover {
        text-decoration:overline;
    }

    .card {
        border: 1px solid #000;
        display: inline-block;
        width: 47%;
        margin-left: 1.4%;
    }

    #menu {
        display: none;
    }

    .card:nth-last-of-type(1) {
        width: 90%;
        margin: 10px auto;
        display: block;

    }

    footer {
        display: inline-flex;
        justify-content: space-around;
        width: 100%;
    }
}

